updated styles to fix spacing issue

--- a/lab/angular/css/main.css
+++ b/lab/angular/css/main.css
@@ -34,8 +34,9 @@ h2 {
 }
 
 .day > div {
-    font-weight: bold;
- line-height: 48px;
+ font-weight: bold;
+ line-height: 18px;
+ margin-bottom: 24px;
 }
 
 .weekday span {
